Add navBar with links and site name

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 
 <body>
 
+    <nav>
+        <div>
+            <label for="">inVent</label>
+        </div>
+        <div>
+            <a href="">Home</a>
+            <a href="">Messages</a>
+            <a href="">Login</a>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="dailyTask">
+        </div>
+    </div>
 
 
     <script src="app.js"></script>
