Add some groundwork to the body of the project

--- a/index.html
+++ b/index.html
@@ -22,8 +22,35 @@
     </nav>
 
     <div class="container">
+
+
         <div class="dailyTask">
+            <h2>Today's Tasks</h2>
+            <ul>
+                <li>Clean glass doors</li>
+                <li>Run truck</li>
+                <li>Work backstock</li>
+            </ul>
+
+            <button id="addTaskBtn">Add a Task</button>
         </div>
+
+        <div class="expirations">
+            <h2>Expirations</h2>
+
+            <div class="expirationsList">
+                <h3>Expiring Soon</h3>
+                <ul>
+                    <li>
+                        <span id="itemName"></span>
+                        <span id="expirationDate"></span>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+
     </div>
 
 
