--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li>Work backstock</li>
             </ul>
 
-            <button id="addTaskBtn">Add a Task</button>
+            <button id="addTaskBtn">Add Task</button>
         </div>
 
         <div class="expirations">
@@ -41,11 +41,13 @@
             <div class="expirationsList">
                 <h3>Expiring Soon</h3>
                 <ul>
-                    <li>
-                        <span id="itemName"></span>
-                        <span id="expirationDate"></span>
+                    <li id="itemExpiring">
+                        <span id="itemName">Chobani Yogurt</span>
+                        <span id="expirationDate">12/23/2023</span>
                     </li>
                 </ul>
+
+                <button>Add Item</button>
             </div>
 
         </div>
