Correct code to ensure scaling works on nav links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <label for="">inVent</label>
         </div>
         <div>
-            <a href="">Home</a>
-            <a href="">Messages</a>
-            <a href="">Login</a>
+            <a href="#">Home</a>
+            <a href="#">Messages</a>
+            <a href="#">Login</a>
         </div>
     </nav>
 
@@ -38,6 +38,8 @@
         <div class="expirations">
             <h2>Expirations</h2>
 
+
+
             <div class="expirationsList">
                 <h3>Expiring Soon</h3>
                 <ul>
@@ -49,6 +51,8 @@
 
                 <button>Add Item</button>
             </div>
+
+
 
         </div>
 
