--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="dailyTask">
             <h2>Today's Tasks</h2>
-            <ul>
+            <ul id="taskListItems">
                 <li>Clean glass doors</li>
                 <li>Run truck</li>
                 <li>Work backstock</li>
