Add coworker notes feature and coming soon feature

--- a/index.html
+++ b/index.html
@@ -22,41 +22,65 @@
     </nav>
 
     <div class="container">
-
-
-        <div class="dailyTask">
-            <h2>Today's Tasks</h2>
-            <ul id="taskListItems">
-                <li>Clean glass doors</li>
-                <li>Run truck</li>
-                <li>Work backstock</li>
-            </ul>
-
-            <button id="addTaskBtn">Add Task</button>
-        </div>
-
-        <div class="expirations">
-            <h2>Expirations</h2>
-
-
-
-            <div class="expirationsList">
-                <h3>Expiring Soon</h3>
-                <ul>
-                    <li id="itemExpiring">
-                        <span id="itemName">Chobani Yogurt</span>
-                        <span id="expirationDate">12/23/2023</span>
-                    </li>
+        <div class="leftSide">
+            <div class="dailyTask">
+                <h2>Today's Tasks</h2>
+                <ul id="taskListItems">
+                    <li>Clean glass doors</li>
+                    <li>Run truck</li>
+                    <li>Work backstock</li>
                 </ul>
 
-                <button>Add Item</button>
+                <button id="addTaskBtn">Add Task</button>
             </div>
 
+            <div class="expirations">
 
+                <h2>Expirations</h2>
 
+                <div class="expirationsList">
+                    <h3>Expiring Soon</h3>
+                    <ul>
+                        <li id="itemExpiring">
+                            <span id="itemName">Chobani Yogurt</span>
+                            <span id="expirationDate">12/23/2023</span>
+                        </li>
+                    </ul>
+
+                    <button>Add Item</button>
+                </div>
+            </div>
         </div>
 
+        <div class="rightSide">
 
+            <div class="workerNotes">
+                <h2>Coworker Notes</h2>
+
+                <div class="noteEntry">
+
+                    <ul>
+                        <li>
+                            <span>12/18/2023</span>
+                            <span>Backstock was ran. Eggs filled but will need to be run again soon.</span>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="upcomingEvents">
+                <h2>Coming Soon</h2>
+
+                <ul>
+                    <li>
+                        <span>12/23/2023</span>
+                        <span>Egg Delivery</span>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
     </div>
 
 
