--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div>
-            <label for="">inVent</label>
+            <span id="inventLogo">in<span id="letterV">V</span>ent</span>
         </div>
         <div>
             <a href="#">Home</a>
