Make logo label link to home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <nav>
         <div>
-            <span id="inventLogo">in<span id="letterV">V</span>ent</span>
+            <a href="/invent/index.html">
+                <span id="inventLogo">in<span id="letterV">V</span>ent</span>
+            </a>
         </div>
         <div>
             <a href="#">Home</a>
