Add functionality to list so that (li)s can be added and removed

--- a/index.html
+++ b/index.html
@@ -27,10 +27,22 @@
         <div class="leftSide">
             <div class="dailyTask">
                 <h2>Today's Tasks</h2>
-                <ul id="taskListItems">
-                    <li>Clean glass doors</li>
-                    <li>Run truck</li>
-                    <li>Work backstock</li>
+                <ul id="taskListItemsList">
+
+                    <div class="taskListItems">
+                        <li>Clean Glass Doors</li>
+                        <button class="deleteButton">x</button>
+                    </div>
+
+                    <div class="taskListItems">
+                        <li>Run Truck</li>
+                        <button class="deleteButton">x</button>
+                    </div>
+
+                    <div class="taskListItems">
+                        <li>Work Backstock</li>
+                        <button class="deleteButton">x</button>
+                    </div>
                 </ul>
 
                 <button id="addTaskBtn">Add Task</button>
