--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="close">&times;</span>
             <h2>Add a Task</h2>
             <input type="text" id="taskInput" placeholder="Enter your task">
-            <button id="saveTaskBtn">Save</button>
+            <button id="saveTaskBtn">Submit</button>
         </div>
     </div>
 
