Add footer and styling for footer

--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
     </div>
 
 
+    <footer>
+        <p>&copy; shawnCo Innovations</p>
+    </footer>
+
+
     <script src="app.js"></script>
 </body>
 
