--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invent</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -22,6 +27,9 @@
             <a href="#">Login</a>
         </div>
     </nav>
+
+    <div class="navBottomBorder"></div>
+
 
     <div id="taskModal" class="modal">
         <div class="modal-content">
@@ -98,7 +106,7 @@
 
 
     <footer>
-        <p>&copy; shawnCo Innovations</p>
+        <p>&copy; shawnCo Innovations 2023</p>
     </footer>
 
 
