Add messages.html to directory with navBar and h1

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </a>
         </div>
         <div>
-            <a href="#">Home</a>
-            <a href="#">Messages</a>
+            <a href="/invent/index.html">Home</a>
+            <a href="/invent/messages.html">Messages</a>
             <a href="#">Login</a>
         </div>
     </nav>
