begin working on adding functionality to coworker feature

--- a/index.html
+++ b/index.html
@@ -49,12 +49,19 @@
         </div>
     </div>
 
+    <div id="coworkerModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Enter Note</h2>
+            <input type="text" id="coworkerInput" placeholder="Note goes here">
+            <button id="saveNoteBtn">Submit</button>
+        </div>
+    </div>
+
     <div class="container">
         <div class="leftSide">
-
             <div class="dailyTask">
                 <h2>Today's Tasks</h2>
-
                 <ul id="taskListItemsList">
                     <div class="taskListItems">
                         <li>Clean Glass Doors</li>
@@ -66,7 +73,6 @@
 
             <div class="expiringItemsList">
                 <h2>Expiring Soon</h2>
-
                 <ul id="expirationsList">
                     <div class="expiringItems">
                         <li>Chobani Yogurt</li>
@@ -76,15 +82,12 @@
                 </ul>
                 <button class="addItemBtn">Add Item</button>
             </div>
-
         </div>
-
-
-
-
-
-
         <div class="rightSide">
+
+
+
+
 
             <div class="workerNotes">
                 <h2>Coworker Notes</h2>
