Added workerNotes section to html and styled it

--- a/index.html
+++ b/index.html
@@ -85,23 +85,15 @@
         </div>
         <div class="rightSide">
 
-
-
-
-
             <div class="workerNotes">
                 <h2>Coworker Notes</h2>
-
-                <div class="noteEntry">
-
-                    <ul>
-                        <li>
-                            <span>12/18/2023</span>
-                            <span>Backstock was ran. Eggs filled but will need to be run again soon.</span>
-                        </li>
-                    </ul>
-
-                </div>
+                <ul class="noteList">
+                    <div class="notes">
+                        <li>Eggs need to be filled</li>
+                        <button class="deleteButton">x</button>
+                    </div>
+                </ul>
+                <button class="addNoteBtn">Add Note</button>
             </div>
 
             <div class="upcomingEvents">
