code html for Events feature and add styling

--- a/index.html
+++ b/index.html
@@ -96,16 +96,19 @@
                 <button class="addNoteBtn">Add Note</button>
             </div>
 
-            <div class="upcomingEvents">
-                <h2>Coming Soon</h2>
 
-                <ul>
-                    <li>
-                        <span>12/23/2023</span>
-                        <span>Egg Delivery</span>
-                    </li>
+            <div class="upcomingEvents">
+                <h2>Incoming Events</h2>
+                <ul class="eventList">
+                    <div class="events">
+                        <span>12/23/23</span>
+                        <li>Egg Delivery</li>
+                        <button class="deleteButton">x</button>
+                    </div>
                 </ul>
+                <button class="addEventBtn">Add Event</button>
             </div>
+
 
         </div>
     </div>
