Add functionality to the coworker notes section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <button class="deleteButton">x</button>
                     </div>
                 </ul>
-                <button class="addNoteBtn">Add Note</button>
+                <button class="addNoteBtn" id="addNoteBtn">Add Note</button>
             </div>
 
 
