--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         </div>
     </div>
 
+    <div id="eventModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;
+                <h2>Enter Event</h2>
+                <input type="text" id="eventInput" placeholder="add event info">
+                <button id="saveEventBtn">Submit</button>
+        </div>
+    </div>
+
     <div class="container">
         <div class="leftSide">
             <div class="dailyTask">
