--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
     <div id="eventModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;
-                <h2>Enter Event</h2>
-                <input type="text" id="eventInput" placeholder="add event info">
-                <button id="saveEventBtn">Submit</button>
+            <span class="close">&times;</span>
+            <h2>Enter Event</h2>
+            <input type="text" id="eventInput" placeholder="Add Event">
+            <button id="saveEventBtn">Submit</button>
         </div>
     </div>
 
@@ -115,7 +115,7 @@
                         <button class="deleteButton">x</button>
                     </div>
                 </ul>
-                <button class="addEventBtn">Add Event</button>
+                <button class="addEventBtn" id="addEventBtn">Add Event</button>
             </div>
 
 
