Add date to home page display

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         </div>
     </div>
 
+    <div class="date">
+        <h3>Today is <span id="currentDate">Monday December 23</span>, work <span id="dayType">backstock</span>.</h3>
+    </div>
+
     <div class="container">
         <div class="leftSide">
             <div class="dailyTask">
