Reorganize code and links so that javascript files are more modular

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </footer>
 
 
-    <script src="app.js"></script>
+    <script type="module" src="/invent/javaScript/main.js"></script>
 </body>
 
 </html>
