--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="date">
-        <h3>Today is <span id="currentDate"></span>, <span id="dayType">backstock</span> day.</h3>
+        <h3>Today is <span id="currentDate"></span>, work <span id="dayType">backstock</span>.</h3>
     </div>
 
     <div class="container">
